# scop

./: .audit_results.md  .editorconfig  .gitignore  ARCHITECTURE.md  README.md  RFC2119.md  RFC5424.md  RFC7841.md  SCOP.md  SCOP_M.md  SCOP_north_star.yaml  package.json  pyproject.toml
docs/: RFC5424.md  RFC7841.md  RFC9920.md  SCOP_IN_BRIEF.md
scop/: __init__.py  expr.py  template.py
scop/models/: ndjson.py  rfc2119.py  rfc7841.py  stream.py
scop/models/common/: base.py  g1.py  rfc2119.py  rfc5424.md  rfc5424.py  rfc7841.py
scop/partials/: __init__.py  table.py  toc.py
scop/rfc/: __init__.py  base.py  rfc5424.py  rfc7841.py
scripts/: __init__.py  dump_raw.py  inspect_meta.py  inspect_meta_full.py  print_tail.py  show_lines.py  template.py
static/: META.yaml  META5424.yaml  METASCOP.yaml  NORTH_STAR.yaml
static/partials/: conformance.md.j2  consumer_routing.md.j2  flag_contracts.md.j2  flags.md.j2  msgids.md.j2  page_template.md.j2  severity.md.j2  table.md.j2  toc.md.j2
static/templates/: RFC2119.md.j2  RFC7841.md.j2  SCOP.md.j2  SCOP_M.md.j2
tests/: conftest.py  ndjson.py  test_ndjson.py  test_ndjson_hypothesis.py  test_quality.py  test_stream.py
