[project]
name = "scop"
version = "0.1.2"
description = ""
authors = [
    { name = "BinaryBand", email = "BinaryBand@users.noreply.github.com" },
]
requires-python = ">=3.11"
dependencies = [
    "jinja2 (>=3.1.6,<4.0.0)",
    "toml (>=0.10.2,<0.11.0)",
    "PyYAML (>=6.0,<7.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
template = "scop.template:main"
